# purple_torch

./: README.md  pyproject.toml
purple_torch/: neural_network.py  trainer.py
tests/: test_neural_network.py
