[tool.poetry]
name = "purple-torch"
version = "0.1.0"
description = ""
authors = ["Richard Nam <richardnam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
matplotlib = "3.8.2"
python = "^3.11"
torch = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
